@startuml
class Document {
  content_id
  locale
}

class Edition {
  number
}

class State {
  user_facing
  publishing_api_sync
  error
}

note left
  Has multiple past states
  One current state
  and potentially one next state
end note

Document -- Edition : current >
Document .. Edition : live >
Edition -- State : current
Edition .. State : next
Edition *-- State : past

object document_1 {
  id = "1"
  content_id = "12345-12345-12345"
  locale = "en"
}

object edition_1 {
  id = "1"
  number = "1"
}
note right
  A submitted edition
  that is syncing a draft
  to Publishing API
end note

object e1_past_state {
  user_facing_state = "draft"
  publishing_api_sync = "complete"
}

object e1_current_state {
  user_facing_state = "submitted"
  publishing_api_sync = "in_progress"
}

object document_2 {
  id = "2"
  content_id = "45678-45678-45678"
  locale = "en"
}

object edition_2 {
  id = "2"
  number = "1"
}

note right
  A submitted edition
  that is syncing a draft
  to Publishing API
end note

object e2_current_state {
  user_facing_state = "submitted"
  publishing_api_sync = "complete"
}

object e2_next_state {
  user_facing_state = "published"
  publishing_api_sync = "failed"
}


document_1 -- edition_1: current
edition_1 .. e1_past_state
edition_1 -- e1_current_state
document_2 -- edition_2: current
edition_2 -- e2_current_state
edition_2 -- e2_next_state
@enduml
